# submit

./: README.md
.github/workflows/: evaluate.yml  publish.yml  reject-main.yml  validate.yml
claude/: claude-code__opus-4.6.json
claude/claude__business_domain__cart__jakarta__quarkus/run_1/: metadata.json
claude/claude__business_domain__cart__jakarta__quarkus/run_2/: metadata.json
claude/claude__business_domain__cart__jakarta__quarkus/run_3/: metadata.json
claude/claude__business_domain__cart__jakarta__spring/run_1/: metadata.json
claude/claude__business_domain__cart__jakarta__spring/run_2/: metadata.json
claude/claude__business_domain__cart__jakarta__spring/run_3/: metadata.json
claude/claude__business_domain__cart__quarkus__jakarta/run_1/: metadata.json
claude/claude__business_domain__cart__quarkus__jakarta/run_2/: metadata.json
claude/claude__business_domain__cart__quarkus__jakarta/run_3/: metadata.json
claude/claude__business_domain__cart__quarkus__spring/run_1/: metadata.json
claude/claude__business_domain__cart__quarkus__spring/run_2/: metadata.json
claude/claude__business_domain__cart__quarkus__spring/run_3/: metadata.json
claude/claude__business_domain__cart__spring__jakarta/run_1/: metadata.json
claude/claude__business_domain__cart__spring__jakarta/run_2/: metadata.json
claude/claude__business_domain__cart__spring__jakarta/run_3/: metadata.json
claude/claude__business_domain__cart__spring__quarkus/run_1/: metadata.json
claude/claude__whole_applications__daytrader__jakarta__quarkus/run_2/output/smoke/: pyproject.toml
(+8732 files in other folders)
