[project]
name = "smoke"
version = "0.1.0"
description = "Smoke tests for DayTrader Quarkus application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-playwright>=0.4.0",
]

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests as smoke tests",
]
